demo/lab-docker-k8s/02-k8s-traefik/ttyd/svc-ingress.yml
# tag::svc[]
---
apiVersion: v1
kind: Service
metadata:
  name: ttyd-service
  namespace: devoxx
  labels:
    guilde: console
spec:
  ports:
  - port: 80
    name: traefik-http
  type: ExternalName
  externalName: {docker_vm_ip}
# end::svc[]

# tag::ingress[]
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ttyd-ingress
  namespace: devoxx
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host:
    http:
      paths:
      - path: /ttyd
        backend:
          serviceName: ttyd-service
          servicePort: traefik-http
# end::ingress[]
